--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -289,67 +289,63 @@
 
 
 
-
-
-
-<!-- CARD DE PREÇO MELHORADO -->
-<div id="preco" class="bg-white/8 border border-gray-700 rounded-2xl p-6 max-w-md mx-auto text-black mt-12 backdrop-blur-sm shadow-lg">
+<!-- CARD DE PREÇO MELHORADO (mobile otimizado) -->
+<div id="preco" class="bg-white/8 border border-gray-700 rounded-2xl p-6 max-w-sm sm:max-w-md mx-auto text-black mt-12 backdrop-blur-sm shadow-lg">
   <!-- Título -->
-  <h3 class="text-xl font-extrabold text-white mb-3 text-center">CÓDIGO DA PERSUASÃO</h3>
+  <h3 class="text-xl font-extrabold text-white mb-4 text-center">CÓDIGO DA PERSUASÃO</h3>
 
-  <!-- Imagem abaixo do título -->
-  <div class="flex justify-center mb-4">
-    <img src="https://i.imgur.com/AQVxso7.png" alt="Capa Código da Persuasão" class="w-28 h-auto object-contain">
+  <!-- Imagem maior -->
+  <div class="flex justify-center mb-6">
+    <img src="https://i.imgur.com/AQVxso7.png" alt="Capa Código da Persuasão" class="w-36 sm:w-40 h-auto object-contain">
   </div>
 
-  <!-- Lista de benefícios / conteúdos -->
-  <ul class="mx-auto max-w-[360px] text-left mb-6 space-y-3 text-white/90">
-    <li class="flex items-start gap-3">
+  <!-- Lista de benefícios -->
+  <ul class="mx-auto max-w-[320px] text-left mb-6 space-y-3 text-white/90 text-sm sm:text-base">
+    <li class="flex items-start gap-2">
       <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
       <span><strong class="text-white">Código Completo de Persuasão</strong></span>
     </li>
-    <li class="flex items-start gap-3">
+    <li class="flex items-start gap-2">
       <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
       <span>Versão em <strong>Audio book</strong> completa</span>
     </li>
-    <li class="flex items-start gap-3">
+    <li class="flex items-start gap-2">
       <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
       <span><strong>Livros Proibidos</strong> para gerar riqueza</span>
     </li>
-    <li class="flex items-start gap-3">
+    <li class="flex items-start gap-2">
       <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
       <span>Conteúdo fechado de grandes Players</span>
     </li>
-    <li class="flex items-start gap-3">
+    <li class="flex items-start gap-2">
       <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
       <span>Garantia de <strong>30 dias</strong></span>
     </li>
-    <li class="flex items-start gap-3">
+    <li class="flex items-start gap-2">
       <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
       <span><strong>Manual de manipulação</strong> de pessoas</span>
     </li>
   </ul>
 
-  <!-- Preço / Opções -->
-  <div class="text-center mb-5">
-    <p class="text-gray-300 mb-1">De <s>R$ 97,00</s> por</p>
+  <!-- Preço -->
+  <div class="text-center mb-6">
+    <p class="text-gray-300 mb-1 text-sm sm:text-base">De <s>R$ 97,00</s> por</p>
 
-    <!-- destaque parcelas -->
     <div class="inline-flex items-baseline gap-3 bg-black/60 px-4 py-3 rounded-full">
-      <span class="text-sm text-gray-300">6x de</span>
-      <span class="text-3xl font-extrabold text-green-400">R$ 5,23</span>
+      <span class="text-xs sm:text-sm text-gray-300">6x de</span>
+      <span class="text-2xl sm:text-3xl font-extrabold text-green-400">R$ 5,23</span>
     </div>
 
-    <div class="mt-3 text-gray-300 text-sm">ou <strong class="text-white">R$ 27,90 à vista</strong></div>
+    <div class="mt-2 text-gray-300 text-xs sm:text-sm">ou <strong class="text-white">R$ 27,90 à vista</strong></div>
   </div>
 
-  <!-- CTA -->
+  <!-- Botão CTA -->
   <a href="https://sun.eduzz.com/E0D6P4V691"
      class="block bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 rounded-lg text-lg transition-all btn-pulsante text-center">
     QUERO DESBLOQUEAR O CÓDIGO
   </a>
 
-  <!-- rodapé pequeno -->
+  <!-- Rodapé -->
   <p class="text-xs text-gray-400 mt-4 text-center">Compra segura — Garantia incondicional de 30 dias</p>
 </div>
 
