--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -290,7 +290,7 @@
 <!-- CARD DE PREÇO MELHORADO -->
 <div id="preco" class="bg-white/10 backdrop-blur-md border border-gray-400 rounded-2xl p-8 max-w-sm sm:max-w-md mx-auto text-black mt-12 shadow-xl">
   <!-- Título -->
-  <h3 class="text-2xl font-extrabold text-white mb-4 text-center">CÓDIGO DA PERSUASÃO</h3>
+  <h3 class="text-2xl font-extrabold text-white mb-4 text-center">🔒 o CÓDIGO DA PERSUASÃO</h3>
 
   <!-- Imagem (Mockup maior) -->
   <div class="flex justify-center mb-6">
@@ -309,6 +309,10 @@
       <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
       <span>Versão em <strong>Audio book</strong> completo</span>
     </li>
+     <li class="flex items-start gap-2">
+      <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+      <span><strong>Manual de manipulação</strong> de pessoas</span>
+    </li>
     <li class="flex items-start gap-2">
       <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
       <span><strong>Livros Proibidos</strong> para gerar riqueza</span>
@@ -321,20 +325,17 @@
       <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
       <span>Garantia de <strong>30 dias</strong></span>
     </li>
-    <li class="flex items-start gap-2">
-      <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-      <span><strong>Manual de manipulação</strong> de pessoas</span>
-    </li>
+   
   </ul>
 
   <!-- Preço -->
   <div class="text-center mb-4">
-    <p class="text-base mb-2">
+    <p class="text-base mb-2 text-gray-200">
       De <s class="text-red-500">R$ 97,00</s> por
     </p>
 
     <div class="flex flex-col items-center leading-none">
-      <span class="text-2xl sm:text-3xl text-gray-300 font-semibold mb-1">6x de</span>
+      <span class="text-xl sm:text-3xl text-gray-300 font-semibold mb-1">6x de</span>
       <span class="text-6xl sm:text-7xl font-extrabold text-green-400 drop-shadow-[0_0_15px_rgba(34,197,94,0.8)]">
         R$ 5,23
       </span>
@@ -346,7 +347,7 @@
   <!-- Botão CTA -->
   <a href="https://sun.eduzz.com/E0D6P4V691"
      class="block bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 rounded-lg text-lg transition-all btn-pulsante text-center">
-    QUERO DESBLOQUEAR O CÓDIGO
+    DESBLOQUEAR O CÓDIGO
   </a>
 
   <!-- Rodapé com imagem colada no botão -->
