--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -290,8 +290,10 @@
 
 
 
+
+
 <!-- CARD DE PREÇO MELHORADO COM MOCKUP SAINDO -->
-<div id="preco" class="relative bg-white/10 backdrop-blur-xl border border-white/20 rounded-2xl p-8 max-w-sm sm:max-w-md mx-auto text-black mt-20 shadow-2xl overflow-hidden">
+<div id="preco" class="relative bg-white/10 backdrop-blur-xl border border-white/20 rounded-2xl p-8 max-w-sm sm:max-w-md mx-auto text-black mt-20 shadow-2xl">
 
   <!-- Reflexos de vidro -->
   <div class="absolute inset-0 pointer-events-none rounded-2xl">
@@ -301,14 +303,14 @@
   </div>
 
   <!-- Imagem (Mockup maior saindo para cima) -->
-  <div class="absolute -top-28 left-1/2 -translate-x-1/2 z-20">
+  <div class="flex justify-center relative -mt-28 z-20">
     <img src="https://i.imgur.com/AQVxso7.png" 
          alt="Capa Código da Persuasão" 
          class="w-[360px] sm:w-[460px] h-auto object-contain drop-shadow-[0_0_45px_rgba(0,0,0,0.9)]">
   </div>
 
-  <!-- Conteúdo interno com padding extra para não sobrepor -->
-  <div class="mt-40 relative z-10">
+  <!-- Conteúdo do card -->
+  <div class="relative z-10 -mt-10">
     <!-- Título -->
     <h3 class="text-2xl font-extrabold text-white mb-4 text-center">🔒 O CÓDIGO DA PERSUASÃO</h3>
 
@@ -367,7 +369,6 @@
     </div>
   </div>
 </div>
-
 
 
 
