--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -112,7 +112,7 @@
     </div>
 
   </div>
-</section><br><br>
+</section><br><br><br>
 
 
 
@@ -312,7 +312,9 @@
   <!-- Conteúdo do card -->
   <div class="relative z-10 -mt-10">
     <!-- Título -->
-    <h3 class="text-2xl font-extrabold text-white mb-4 text-center">🔒 O CÓDIGO DA PERSUASÃO</h3>
+ <h3 class="text-2xl font-extrabold text-white mb-6 text-center relative z-10 mt-10">
+  🔒 O CÓDIGO DA PERSUASÃO
+</h3>
 
     <!-- Lista de benefícios -->
     <ul class="mx-auto max-w-[300px] text-left mb-6 space-y-3 text-white/90 text-sm sm:text-base">
