--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -350,13 +350,13 @@
         De <s class="text-red-500">R$ 97,00</s> por
       </p>
       <div class="flex flex-col items-center leading-none">
-        <span class="text-xl sm:text-2xl text-gray-300 font-semibold mb-1">6x de</span>
+        <span class="text-xl sm:text-2xl text-gray-300 mb-1">6x de</span>
         <span class="text-6xl sm:text-7xl font-extrabold text-green-400 drop-shadow-[0_0_20px_rgba(34,197,94,0.9)]">
           R$ 5,23
         </span>
       </div>
-      <div class="mt-1 text-gray-200 text-base">ou <strong class="text-white">R$ 27,90 à vista</strong></div>
-    </div>
+      <div class="mt-1 text-gray-200 text-base">ou R$ 27,90 à vista</div>
+    </div><br>
 
     <!-- Botão CTA -->
     <a href="https://sun.eduzz.com/E0D6P4V691"
