--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -502,18 +502,26 @@
   <p class="text-gray-300 mb-8">De <s>R$ 97,00</s> por apenas R$ 27,90 à vista ou 6x de R$ 5,23.<br> Aproveite antes que o preço suba!</p>
   <a href="https://sun.eduzz.com/E0D6P4V691" 
      class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
-     ✅ SIM, QUERO ACESSAR AGORA
+     ✅ QUERO ACESSAR AGORA
   </a>
 </section>
 
+
+
 <!-- FOOTER -->
 <footer class="bg-black text-gray-500 text-xs text-center py-8 px-4">
+  
+  <!-- Imagem pequena acima do texto -->
+  <div class="flex justify-center mb-2">
+    <img src="https://i.imgur.com/lZS1RTg.png" 
+         alt="Logo Footer" 
+         class="w-16 h-auto opacity-90">
+  </div>
+
   <p><strong>O Código da Persuasão</strong> - Todos os direitos reservados.<br>
   ESTE SITE NÃO É do FACEBOOK. Este site não faz parte do site do Facebook ou do Facebook Inc.<br>
   FACEBOOK é uma marca comercial independente da FACEBOOK, Inc.</p>
 </footer>
-
-
 
 
 <script>
