--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -349,7 +349,7 @@
       <p class="text-base mb-2 text-gray-200">
         De <s class="text-red-500">R$ 97,00</s> por
       </p>
-    <div class="flex items-end justify-center gap-2 leading-none">
+<div class="flex items-center justify-center gap-2 leading-none">
   <span class="text-xl sm:text-2xl text-gray-300">6x de</span>
   <span class="text-6xl sm:text-7xl font-extrabold text-green-400 drop-shadow-[0_0_20px_rgba(34,197,94,0.9)]">
     R$ 5,23
@@ -516,7 +516,7 @@
   <div class="flex justify-center mb-2">
     <img src="https://i.imgur.com/lZS1RTg.png" 
          alt="Logo Footer" 
-         class="w-16 h-auto opacity-90">
+         class="w-64 h-auto opacity-90">
   </div>
 
   <p><strong>O Código da Persuasão</strong> - Todos os direitos reservados.<br>
