--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -122,7 +122,7 @@
   
   <!-- Imagem translucida bem próxima do título -->
   <div class="flex justify-center">
-    <img src="https://i.imgur.com/7rCmcDK.png" 
+    <img src="https://i.imgur.com/5cdAX57.png" 
          alt="Decoração"
          class="w-full max-w-3xl opacity-80 -mb-2">
   </div>
