--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -120,12 +120,23 @@
 <!-- SEÇÃO 2: PARA QUEM É -->
 <section class="px-6 pt-0 pb-12 bg-black text-center">
   
-  <!-- Imagem translucida bem próxima do título -->
-  <div class="flex justify-center">
-    <img src="https://i.imgur.com/5cdAX57.png" 
-         alt="Decoração"
-         class="w-full max-w-3xl opacity-80 -mb-2">
-  </div>
+<!-- Imagem translucida bem próxima do título -->
+<div class="flex justify-center">
+  <img src="https://i.imgur.com/5cdAX57.png" 
+       alt="Decoração"
+       class="w-full max-w-3xl opacity-0 -mb-2 fade-in-image">
+</div>
+
+<style>
+  .fade-in-image {
+    animation: fadeIn 2s ease-in forwards;
+  }
+
+  @keyframes fadeIn {
+    from { opacity: 0; transform: translateY(20px); }
+    to { opacity: 0.8; transform: translateY(0); }
+  }
+</style>
 
   <!-- Título -->
   <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
