--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -122,9 +122,8 @@
   
 <!-- Imagem translucida bem próxima do título -->
 <div class="flex justify-center">
-  <img src="https://i.imgur.com/5cdAX57.png" 
-       alt="Decoração"
-       class="w-full max-w-3xl opacity-0 -mb-2 fade-in-image">
+  <img src="https://i.imgur.com/DTKVsMB.png" 
+   class="w-full max-w-3xl opacity-0 -mb-2 fade-in-image">
 </div>
 
 <style>
