--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -121,21 +121,26 @@
 <section class="px-6 pt-0 pb-12 bg-black text-center">
   
 <!-- Imagem translucida bem próxima do título -->
+
+<!-- Imagem translucida com fade-in -->
 <div class="flex justify-center">
-  <img src="https://i.imgur.com/DTKVsMB.png" 
-   class="w-full max-w-3xl opacity-0 -mb-2 fade-in-image">
+  <img src="https://i.imgur.com/5cdAX57.png" 
+       alt="Decoração"
+       class="w-full max-w-2xl opacity-0 animate-fade-in -mb-2">
 </div>
 
 <style>
-  .fade-in-image {
-    animation: fadeIn 2s ease-in forwards;
-  }
+@keyframes fadeIn {
+  from { opacity: 0; transform: scale(1.05); }
+  to   { opacity: 0.8; transform: scale(1); }
+}
 
-  @keyframes fadeIn {
-    from { opacity: 0; transform: translateY(20px); }
-    to { opacity: 0.8; transform: translateY(0); }
-  }
+.animate-fade-in {
+  animation: fadeIn 1.5s ease-in-out forwards;
+  animation-delay: 2s; /* só aparece depois de 2 segundos */
+}
 </style>
+
 
   <!-- Título -->
   <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
