--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -112,15 +112,14 @@
     </div>
 
   </div>
-</section><br><br><br>
+</section><br><br><br><br>
 
 
 
 
 <!-- SEÇÃO 2: PARA QUEM É -->
 <section class="px-6 pt-0 pb-12 bg-black text-center">
-  
-<!-- Imagem translucida bem próxima do título -->
+ 
 
 <!-- Imagem translucida com fade-in -->
 <div class="flex justify-center">
