--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -506,7 +506,7 @@
       A compra deste material é totalmente sem risco para você.<br><br>
       Se ele não atender às suas expectativas nos primeiros 30 dias após a compra, nós reembolsaremos 
       todo o valor que você pagou, sem fazer perguntas.<br><br>
-      Basta enviar um e-mail para o suporte em <b>contato[at]start-app.com</b>
+      Basta enviar um e-mail para o suporte em <b>contato@start-app.com</b>
     </p>
   </div>
 </section>
