--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -616,7 +616,40 @@
   setTimeout(showToast, 3000);
 </script>
 
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '839138854780074'); // seu pixel ID
+  fbq('track', 'PageView');
+</script>
+<noscript>
+  <img height="1" width="1" style="display:none"
+       src="https://www.facebook.com/tr?id=839138854780074&ev=PageView&noscript=1"/>
+</noscript>
 
+
+<!-- SCRIPT PARA REPASSAR UTM -->
+<script>
+  // captura os parâmetros da URL
+  const queryString = window.location.search;
+
+  // encontra todos os links com eduzz/sun/checkout/etc
+  document.querySelectorAll("a[href*='sun.eduzz.com'], a[href*='eduzz.com']").forEach(link => {
+    let url = new URL(link.href);
+
+    // se já tem query, mantém
+    if(queryString){
+      url.search += (url.search ? '&' : '') + queryString.substring(1);
+      link.href = url.toString();
+    }
+  });
+</script>
 
 </body>
 </html>
