--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -45,13 +45,14 @@
 
 <!-- Tarja Vermelha com Cronômetro -->
 <div class="aviso-topo" id="aviso-topo">
-  ⚠️ ATENÇÃO: Essa página sairá do ar em breve, corra enquanto é tempo!  
+  ⚠️ <b>ATENÇÃO:</b> Essa página sairá do ar em breve...<br>
+  Corra, enquanto há tempo.  
   <span id="countdown" style="margin-left:10px; font-weight:bold;"></span>
 </div>
 
 <script>
   // Cronômetro regressivo de 5 minutos
-  let tempo = 5 * 60; 
+  let tempo = 10 * 60; 
   const countdownEl = document.getElementById("countdown");
 
   function atualizarCountdown() {
@@ -82,7 +83,8 @@
   });
 </script>
 
-<!-- HERO --><br><br>
+<!-- HERO -->
+ <br><br>
 <section class="relative px-6 pt-12 pb-4 lg:pt-16 lg:pb-4 bg-black">
   <div class="max-w-6xl mx-auto grid grid-cols-1 lg:grid-cols-2 items-center gap-10">
 
@@ -96,19 +98,23 @@
     <!-- Texto -->
     <div class="text-center lg:text-left lg:order-1">
       <h1 class="text-3xl lg:text-5xl font-bold leading-tight mb-6">
-        <span class="text-white">O Código da Persuasão:</span><br>
+        <span class="text-white">O CÓDIGO DA [P]ERSUASÃO</span><br>
         <span class="bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
-          Domine os Gatilhos Mentais
+          TE FARÁ DOMINAR TODAS AS PESSOAS
         </span>
       </h1>
       <p class="text-lg max-w-xl mx-auto lg:mx-0 text-gray-300 mb-8">
-        Descubra como usar técnicas comprovadas de PNL e persuasão para influenciar pessoas, 
+        Conquiste o que deseja com estas técnicas comprovadas de PNL e persuasão para influenciar pessoas, 
         conquistar respeito e transformar sua vida.
-      </p>
-  <a href="#preco" 
+      </p><br>
+<a href="#preco" 
    class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
    🔒 DESBLOQUEAR CÓDIGO
 </a>
+
+<p class="mt-2 text-sm text-gray-400 font-serif">
+  *Só clique se tiver coragem de começar!
+</p>
     </div>
 
   </div>
@@ -143,7 +149,7 @@
 
   <!-- Título -->
   <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
-    Descubra se você tem maturidade p/ este material
+    Descubra se vc tem maturidade p/ este conteúdo...
   </h2>
 
   <!-- Grid dos cards -->
@@ -152,7 +158,7 @@
       <img src="https://img.freepik.com/premium-photo/audience-concert-black-white_832479-14491.jpg"
            class="absolute inset-0 w-full h-full object-cover opacity-30" />
       <div class="relative z-10 text-white font-semibold">
-        Para quem sente dificuldade em influenciar pessoas.
+        É p/ quem sente dificuldade em influenciar e manipular pessoas.
       </div>
     </div>
 
@@ -215,7 +221,7 @@
 <!-- SEÇÃO 3 -->
 <section class="relative px-6 py-32 bg-black text-center overflow-hidden">
   <h2 class="text-3xl lg:text-4xl font-bold mb-16 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent relative z-20">
-    O que você vai aprender dentro do Código da <span class="text-red-600">Persuasão</span>?
+    O que vc vai aprender dentro do Código da <span class="text-red-600">[P]ersuasão</span>?
   </h2>
 
   <!-- Linha de sangue -->
@@ -231,7 +237,7 @@
     <p class="opacity-0 transition-opacity duration-1000 text-white text-base max-w-md fade-text drop-shadow-[0_0_10px_black]">
       🧠 Domine as técnicas de PNL para <br>
       programar sua mente e influenciar <br>
-      os outros.
+      pessoas.
     </p>
     <p class="opacity-0 transition-opacity duration-1000 text-white text-base max-w-md fade-text drop-shadow-[0_0_10px_black]">
       🎯 Veja aplicações práticas em vendas, <br>
@@ -302,11 +308,7 @@
 
 
 
-
-
-
-
-<!-- CARD DE PREÇO MELHORADO COM MOCKUP SAINDO -->
+<!-- CARD DE PREÇO -->
 <div id="preco" class="relative bg-white/10 backdrop-blur-xl border border-white/20 rounded-2xl p-8 max-w-sm sm:max-w-md mx-auto text-black mt-20 shadow-2xl">
 
   <!-- Reflexos de vidro -->
@@ -316,7 +318,7 @@
     <div class="absolute inset-0 bg-gradient-to-tr from-white/5 to-transparent opacity-5"></div>
   </div>
 
-  <!-- Imagem (Mockup maior saindo para cima) -->
+  <!-- Imagem  -->
   <div class="flex justify-center relative -mt-36 z-20">
     <img src="https://i.imgur.com/AQVxso7.png" 
          alt="Capa Código da Persuasão" 
@@ -327,7 +329,7 @@
   <div class="relative z-10 -mt-10">
     <!-- Título -->
  <h3 class="text-2xl font-extrabold text-white mb-6 text-center relative z-10 mt-10">
-  🔒 O CÓDIGO DA PERSUASÃO
+  O CÓDIGO DA [P]ERSUASÃO
 </h3>
 
     <!-- Lista de benefícios -->
@@ -346,15 +348,15 @@
       </li>
       <li class="flex items-start gap-2">
         <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-        <span><strong>Livros Proibidos</strong> para gerar riqueza</span>
+        <span><strong>Livros Proibidos</strong> para gerar Riqueza</span>
       </li>
       <li class="flex items-start gap-2">
         <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-        <span>Conteúdo fechado de grandes Players</span>
+        <span>Conteúdo fechado de grandes Mentorias</span>
       </li>
       <li class="flex items-start gap-2">
         <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-        <span>Garantia de <strong>30 dias</strong></span>
+        <span>Acesso <strong>vitalício</strong></span>
       </li>
     </ul>
 
@@ -399,7 +401,7 @@
 <!-- SEÇÃO DEPOIMENTOS -->
 <section class="px-6 py-20 bg-black text-center relative overflow-hidden">
   <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
-    O que dizem os leitores do Código da Persuasão
+    O que estes MANIPULADORES estão dizendo sobre o Código da [P]ersuasão
   </h2>
 
   <div class="slider-container relative w-full overflow-hidden">
@@ -504,9 +506,8 @@
          class="mx-auto mb-6 w-32 lg:w-40">
     <h3 class="text-2xl font-bold mb-4">Garantia Incondicional de 30 Dias</h3>
     <p style="font-size:14px; color:#333; line-height:1.5; max-width:420px; margin:0 auto;">
-      A compra deste material é totalmente sem risco para você.<br><br>
-      Se ele não atender às suas expectativas nos primeiros 30 dias após a compra, nós reembolsaremos 
-      todo o valor que você pagou, sem fazer perguntas.<br><br>
+      Eu sei que você vive com medinho, então eu decidi garantir este material por 30 dias.<br><br>
+      Se ele não atender às suas expectativas, nós reembolsaremos essa mixaria que você pagou, sem perguntas.<br><br>
       Basta enviar um e-mail para o suporte em <b>contato@start-app.com</b>
     </p>
   </div>
@@ -514,8 +515,11 @@
 
 <!-- OFERTA FINAL -->
 <section class="px-6 py-20 bg-gradient-to-b from-black to-gray-900 text-center">
-  <h2 class="text-3xl lg:text-5xl font-bold mb-6">Oferta Especial de Lançamento</h2>
-  <p class="text-gray-300 mb-8">De <s>R$ 97,00</s> por apenas R$ 27,90 à vista ou 6x de R$ 5,23.<br> Aproveite antes que o preço suba!</p>
+  <h2 class="text-3xl lg:text-5xl font-bold mb-6"><b>Ansioso...</b> Já rolou a página para baixo sem ler?</h2>
+  <p class="text-gray-300 mb-8">Vou reusimir do que se trata... Este material é um guia completo de PNL e gatilhos mentais para influenciar pessoas, persuadir e conquistar respeito, vendas e autoridade. 
+<br><br>
+ <p class="text-gray-300 mb-8">CUIDADO: Não utilize estas técnicas para o mal!!! 
+  </p>
   <a href="https://sun.eduzz.com/E0D6P4V691" 
      class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
      ✅ QUERO ACESSAR AGORA
