--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -112,7 +112,7 @@
    🔒 DESBLOQUEAR CÓDIGO
 </a>
 
-<p class="mt-2 text-sm text-gray-400 font-serif">
+<p class="mt-4 text-sm text-gray-400">
   *Só clique se tiver coragem de começar!
 </p>
     </div>
