--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>O Código da Persuasão</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/25/25694.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Favicon -->
+<link rel="icon" href="https://images.vexels.com/media/users/3/151591/isolated/preview/194d21749d494d511e1dd27f7f6c4f8a-icone-de-respingos-de-sangue.png" type="image/png">
+
+<!-- Open Graph para redes sociais -->
+<meta property="og:title" content="O Código da Persuasão" />
+<meta property="og:description" content="Descubra os gatilhos mentais ocultos e técnicas de persuasão proibidas." />
+<meta property="og:image" content="https://images.vexels.com/media/users/3/151591/isolated/preview/194d21749d494d511e1dd27f7f6c4f8a-icone-de-respingos-de-sangue.png" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://seudominio.com" />
+
+<!-- Para WhatsApp e Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="O Código da Persuasão" />
+<meta name="twitter:description" content="Descubra os gatilhos mentais ocultos e técnicas de persuasão proibidas." />
+<meta name="twitter:image" content="https://images.vexels.com/media/users/3/151591/isolated/preview/194d21749d494d511e1dd27f7f6c4f8a-icone-de-respingos-de-sangue.png" />
 
   <style>
     /* Tarja Vermelha */
