--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -5,24 +5,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>O Código da Persuasão</title>
-  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/25/25694.png" type="image/png">
+  <link rel="icon" href="https://i.imgur.com/iPllVtt.jpeg" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Favicon -->
-<link rel="icon" href="https://images.vexels.com/media/users/3/151591/isolated/preview/194d21749d494d511e1dd27f7f6c4f8a-icone-de-respingos-de-sangue.png" type="image/png">
+<link rel="icon" href="https://i.imgur.com/iPllVtt.jpeg" type="image/png">
 
 <!-- Open Graph para redes sociais -->
 <meta property="og:title" content="O Código da Persuasão" />
 <meta property="og:description" content="Descubra os gatilhos mentais ocultos e técnicas de persuasão proibidas." />
-<meta property="og:image" content="https://images.vexels.com/media/users/3/151591/isolated/preview/194d21749d494d511e1dd27f7f6c4f8a-icone-de-respingos-de-sangue.png" />
+<meta property="og:image" content="https://i.imgur.com/iPllVtt.jpeg" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://seudominio.com" />
+<meta property="og:url" content="https://bigoffer.netlify.app/lp-1/" />
 
 <!-- Para WhatsApp e Twitter -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="O Código da Persuasão" />
 <meta name="twitter:description" content="Descubra os gatilhos mentais ocultos e técnicas de persuasão proibidas." />
-<meta name="twitter:image" content="https://images.vexels.com/media/users/3/151591/isolated/preview/194d21749d494d511e1dd27f7f6c4f8a-icone-de-respingos-de-sangue.png" />
+<meta name="twitter:image" content="https://i.imgur.com/iPllVtt.jpeg" />
 
   <style>
     /* Tarja Vermelha */
@@ -126,7 +126,7 @@
       </p><br>
 <a href="#preco" 
    class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
-   ASSUMIR OS RISCOS
+   🔒 ASSUMIR OS RISCOS
 </a>
 
 <p class="mt-4 text-sm text-gray-400">
