--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -525,7 +525,7 @@
     <p style="font-size:14px; color:#333; line-height:1.5; max-width:420px; margin:0 auto;">
       Eu sei que você vive com medinho, então eu decidi garantir este material por 30 dias.<br><br>
       Se ele não atender às suas expectativas, nós reembolsaremos essa mixaria que você pagou, sem perguntas.<br><br>
-      Basta enviar um e-mail para o suporte <b>contato@start-app.com</b>
+      Basta enviar um e-mail para o suporte <b>contato@codigo-persuasao.com.br</b>
     </p>
   </div>
 </section>
