--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -4,7 +4,7 @@
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>O Código da Persuasão</title>
+  <title>O Código da [P]ersuasão</title>
   <link rel="icon" href="https://i.imgur.com/iPllVtt.jpeg" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -12,7 +12,7 @@
 <link rel="icon" href="https://i.imgur.com/iPllVtt.jpeg" type="image/png">
 
 <!-- Open Graph para redes sociais -->
-<meta property="og:title" content="O Código da Persuasão" />
+<meta property="og:title" content="O Código da [P]ersuasão" />
 <meta property="og:description" content="Descubra os gatilhos mentais ocultos e técnicas de persuasão proibidas." />
 <meta property="og:image" content="https://i.imgur.com/iPllVtt.jpeg" />
 <meta property="og:type" content="website" />
@@ -20,7 +20,7 @@
 
 <!-- Para WhatsApp e Twitter -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="O Código da Persuasão" />
+<meta name="twitter:title" content="O Código da [P]ersuasão" />
 <meta name="twitter:description" content="Descubra os gatilhos mentais ocultos e técnicas de persuasão proibidas." />
 <meta name="twitter:image" content="https://i.imgur.com/iPllVtt.jpeg" />
 
@@ -108,8 +108,7 @@
     <!-- Imagem -->
     <div class="flex justify-center lg:order-2">
       <img src="https://i.imgur.com/rE9pIj5.png" 
-           alt="O Código da Persuasão"
-           class="w-[90%] max-w-sm lg:max-w-md object-contain" />
+          class="w-[90%] max-w-sm lg:max-w-md object-contain" />
     </div>
 
     <!-- Texto -->
@@ -551,11 +550,10 @@
   <!-- Imagem pequena acima do texto -->
   <div class="flex justify-center mb-2">
     <img src="https://i.imgur.com/lZS1RTg.png" 
-         alt="Logo Footer" 
-         class="w-64 h-auto opacity-90">
+        class="w-64 h-auto opacity-90">
   </div>
 
-  <p><strong>O Código da Persuasão</strong> - Todos os direitos reservados.<br>
+  <p><strong>O Código da [P]ersuasão</strong> - Todos os direitos reservados.<br>
   ESTE SITE NÃO É do FACEBOOK. Este site não faz parte do site do Facebook ou do Facebook Inc.<br>
   FACEBOOK é uma marca comercial independente da FACEBOOK, Inc.</p>
 </footer>
