--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -531,7 +531,7 @@
 
 <!-- OFERTA FINAL -->
 <section class="px-6 py-20 bg-gradient-to-b from-black to-gray-900 text-center">
-  <h2 class="text-3xl lg:text-5xl font-bold mb-6"><b>Ansioso...</b> Já rolou a página para baixo sem ler?</h2>
+  <h2 class="text-3xl lg:text-5xl font-bold mb-6"><b>⚠️ Ansioso...</b> Já rolou a página até o final sem ler?</h2>
   <p class="text-gray-300 mb-8">Vou resumir para vc... Este material é um guia completo de <b>PNL e Gatilhos Mentais</b> para influenciar pessoas, persuadir e conquistar respeito, vendas e autoridade. 
 <br>
  <p class="text-gray-300 mb-8"><b>CUIDADO:</b> Não utilize estas técnicas para o mal!!! 
@@ -548,10 +548,10 @@
 <footer class="bg-black text-gray-500 text-xs text-center py-8 px-4">
   
   <!-- Imagem pequena acima do texto -->
-  <div class="flex justify-center mb-2">
-    <img src="https://i.imgur.com/lZS1RTg.png" 
-        class="w-64 h-auto opacity-90">
-  </div>
+<div class="flex justify-center mb-2">
+  <img src="https://i.imgur.com/lZS1RTg.png" 
+       class="w-64 h-auto opacity-50">
+</div>
 
   <p><strong>O Código da [P]ersuasão</strong> - Todos os direitos reservados.<br>
   ESTE SITE NÃO É do FACEBOOK. Este site não faz parte do site do Facebook ou do Facebook Inc.<br>
