--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -164,9 +164,9 @@
 
 
   <!-- Título -->
-  <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
-    Descubra se vc tem maturidade p/ este tipo de conteúdo...
-  </h2>
+<h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
+  Descubra se vc tem <span class="border-b-2 border-red-600 pb-0.5">maturidade</span> p/ este tipo de conteúdo...
+</h2>
 
   <!-- Grid dos cards -->
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-5xl mx-auto">
