--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -165,7 +165,7 @@
 
   <!-- Título -->
 <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
-  Descubra se vc tem <span class="border-b-2 border-red-600 pb-0.5">maturidade</span> p/ este tipo de conteúdo...
+  Descubra se vc tem <span class="underline decoration-red-600 decoration-2 underline-offset-2">maturidade</span> p/ este tipo de conteúdo...
 </h2>
 
   <!-- Grid dos cards -->
