--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -417,7 +417,7 @@
 <!-- SEÇÃO DEPOIMENTOS -->
 <section class="px-6 py-20 bg-black text-center relative overflow-hidden">
   <h2 class="text-3xl lg:text-4xl font-bold mb-10 bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
-    🧠 Manipuladores Que Garantiram o Código da [P]ersuasão:
+    Manipuladores que garantiram o Código da [P]ersuasão:
   </h2>
 
   <div class="slider-container relative w-full overflow-hidden">
