--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -548,14 +548,11 @@
 <footer class="bg-black text-gray-500 text-xs text-center py-8 px-4">
   
   <!-- Imagem pequena acima do texto -->
-<div class="flex justify-center mb-2">
-  <img src="https://i.imgur.com/lZS1RTg.png" 
-       class="w-64 h-auto opacity-65">
-</div>
+<br><br>
 
   <p><strong>O Código da [P]ersuasão</strong> - Todos os direitos reservados.<br>
   ESTE SITE NÃO É do FACEBOOK. Este site não faz parte do site do Facebook ou do Facebook Inc.<br>
-  FACEBOOK é uma marca comercial independente da FACEBOOK, Inc.</p>
+  FACEBOOK é uma marca comercial independente da FACEBOOK, Inc.</p><br><br>
 </footer>
 
 
