--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -25,7 +25,9 @@
 <meta name="twitter:image" content="https://i.imgur.com/iPllVtt.jpeg" />
 
   <style>
-    /* Tarja Vermelha */
+      html {
+    scroll-behavior: smooth;
+  }
     .aviso-topo {
       background-color: #b71e1e;
       color: #fff;
