--- a/lp-2/index.html
+++ b/lp-2/index.html
@@ -116,14 +116,13 @@
     <!-- Texto -->
     <div class="text-center lg:text-left lg:order-1">
       <h1 class="text-3xl lg:text-5xl font-bold leading-tight mb-6">
-        <span class="text-white">O Código da [P]ersuasão</span><br>
+        <span class="text-white">O Segredo Mais </span><br>
         <span class="bg-gradient-to-t from-gray-400 to-white bg-clip-text text-transparent">
-          Te Fará Rico Nos Próximos Dias
+          Sombrio da [P]ersuasão
         </span>
       </h1>
       <p class="text-lg max-w-xl mx-auto lg:mx-0 text-gray-300 mb-8">
-        Conquiste o que deseja com estas técnicas comprovadas de PNL e persuasão para <b>manipular pessoas, 
-        conquistar dinheiro e respeito</b>.
+        Descubra como transformar palavras em armas de influência para dominar negócios, relacionamentos e dinheiro.</b>.
       </p><br>
 <a href="#preco" 
    class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
