--- a/lp-2/index.html
+++ b/lp-2/index.html
@@ -609,7 +609,7 @@ toast.innerHTML = `
   <div class="shrink-0 mt-0.5">${CHECK_SVG}</div>
   <div class="flex-1 leading-tight">
     <div class="font-semibold">${nome}, ${uf}</div>
-    <div class="text-sm text-white/90">Compra efetuada!</div>
+    <div class="text-sm text-white/90">Entrou na Comunidade!</div>
   </div>
 `;
 
