--- a/lp-3/index.html
+++ b/lp-3/index.html
@@ -122,7 +122,7 @@
         </span>
       </h1>
       <p class="text-lg max-w-xl mx-auto lg:mx-0 text-gray-300 mb-8">
-        Use gatilhos ocultos da PNL para dobrar vendas, manipular decisões e conquistar poder em qualquer situação.</b>.
+        Use gatilhos ocultos da PNL para dobrar <b>vendas, manipular decisões e conquistar poder</b> em qualquer situação.</b>.
       </p><br>
 <a href="#preco" 
    class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
