--- a/lp-2/index.html
+++ b/lp-2/index.html
@@ -122,7 +122,7 @@
         </span>
       </h1>
       <p class="text-lg max-w-xl mx-auto lg:mx-0 text-gray-300 mb-8">
-        Descubra como transformar palavras em armas de influência para dominar negócios, relacionamentos e dinheiro.</b>.
+        Descubra como transformar palavras em <b>armas de influência para dominar negócios, relacionamentos e dinheiro</b>.
       </p><br>
 <a href="#preco" 
    class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
