--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -109,7 +109,7 @@
 
     <!-- Imagem -->
     <div class="flex justify-center lg:order-2">
-      <img src="https://i.imgur.com/rE9pIj5.png" 
+      <img src="https://i.imgur.com/0lYJNhC.png" 
           class="w-[90%] max-w-sm lg:max-w-md object-contain" />
     </div>
 
