--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -127,7 +127,7 @@
       </p><br>
 <a href="#preco" 
    class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
-   🔒 ASSUMIR OS RISCOS
+   🔒 GANHAR VANTAGEM!
 </a>
 
 <p class="mt-4 text-sm text-gray-400">
