--- a/lp-2/index.html
+++ b/lp-2/index.html
@@ -126,7 +126,7 @@
       </p><br>
 <a href="#preco" 
    class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
-   🔒 ASSUMIR OS RISCOS
+   🔒 DESBLOQUEAR CÓDIGO
 </a>
 
 <p class="mt-4 text-sm text-gray-400">
